2002-06-05  Sam Steingold  <sds@gnu.org>

	tweaked the last Arseny's patch
	* socket.d (lingerize_socket) [WIN32]: removed (not used)
	(ioctl) [WIN32]: moved to win32.d
	* win32.d (ioctl): define here, just like ioctl for UNIX is
	defined in unix.d

2002-06-04  Peter Burwood  <clisp@peterb.org.uk>

	* m4/address.m4 (CL_ADDRESS_RANGE): Remove cl_cv_prog_cc_ansi test
	now that CL_CC_ANSI is not required.

2002-06-05  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Working with sockets on win32
	* win32.d (socket_wait_event): new enum typedef
	(interruptible_socket_wait): renamed from
	interruptible_wait and generalized to take event parameter,
	see socket select() function for description of	these events.
	* win32aux.d (socket_wait_params): parameter struct to pass
	in thread.
	(do_socket_wait): renamed from do_wait, takes struct
	as Joerg likes, now tests for given event, not only for read.
	(interruptible_socket_wait): parameters changed to struct.
	* socket.d (ioctl) [WIN32]: define on win32 as ioctlsocket.
	(bindlisten_via_ip): don't lingerize socket (seems working,
	need to test).
	(connect_via_ip): don't lingerize. Fixed for win32 (may affect
	UNIX behavior too).
	* stream.d (socket_server_wait): use renamed
	interruptible_socket_wait.

2002-06-04  Peter Burwood  <clisp@peterb.org.uk>

	* lispbibl.d (DYNAMIC_STRING): Replace obsolete Rectype_Sstring with
	Rectype_S8string

2002-06-04  Sam Steingold  <sds@gnu.org>

	* savemem.lisp (saveinitmem): added :START-PACKAGE argument

2002-06-04  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (CONFIGURES): added libcharset/configure
	(libcharset/configure): new target

2002-06-03  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): print the length of the lists
	before enumerating properties, packages, symbols &c

2002-06-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (packopt): fixed the 2002-05-15 patch which broke
	giving meaningful package options (e.g. --with-threads=POSIX_THREADS)
