@@ -7708,10 +7708,17 @@ extern object allocate_imm_s32string (uintL len);
       var object objvar = ((Sstring)objvar##_storage)->GCself = bias_type_pointer_object(varobject_bias,sstring_type,(Sstring)objvar##_storage); \
       ((Sstring)objvar##_storage)->length = (len);
   #else
-    #define DYNAMIC_STRING(objvar,len)  \
-      DYNAMIC_ARRAY(objvar##_storage,object,ceiling((uintL)(len)*sizeof(chart)+offsetofa(sstring_,data),sizeof(object))); \
-      var object objvar = ((Sstring)objvar##_storage)->GCself = bias_type_pointer_object(varobject_bias,sstring_type,(Sstring)objvar##_storage); \
-      ((Sstring)objvar##_storage)->tfl = lrecord_tfl(Rectype_S8string,len);
+    #ifdef UNICODE
+      #define DYNAMIC_STRING(objvar,len)  \
+        DYNAMIC_ARRAY(objvar##_storage,object,ceiling((uintL)(len)*sizeof(chart)+offsetofa(sstring_,data),sizeof(object))); \
+        var object objvar = ((Sstring)objvar##_storage)->GCself = bias_type_pointer_object(varobject_bias,sstring_type,(Sstring)objvar##_storage); \
+        ((Sstring)objvar##_storage)->tfl = lrecord_tfl(Rectype_S32string,len);
+    #else
+      #define DYNAMIC_STRING(objvar,len)  \
+        DYNAMIC_ARRAY(objvar##_storage,object,ceiling((uintL)(len)*sizeof(chart)+offsetofa(sstring_,data),sizeof(object))); \
+        var object objvar = ((Sstring)objvar##_storage)->GCself = bias_type_pointer_object(varobject_bias,sstring_type,(Sstring)objvar##_storage); \
+        ((Sstring)objvar##_storage)->tfl = lrecord_tfl(Rectype_S8string,len);
+    #endif
   #endif
   #define FREE_DYNAMIC_STRING(objvar)  \
     FREE_DYNAMIC_ARRAY(objvar##_storage)
