@@ -1,3 +1,8 @@
+2002-06-05  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d (DYNAMIC_STRING) [UNICODE]: Use Rectype_S32string, not
+	Rectype_S8string.
+
 2002-06-05  Sam Steingold  <sds@gnu.org>
 
 	tweaked the last Arseny's patch
